--- a/src/less/main.less
+++ b/src/less/main.less
@@ -10,18 +10,18 @@
  * project should be imported as the rest are just wasting space.
 //*/
 //
-//@import '../../vendor/bootstrap/less/mixins.less';
-//@import '../../vendor/bootstrap/less/reset.less';
-//@import '../../vendor/bootstrap/less/utilities.less';
-//@import '../../vendor/bootstrap/less/scaffolding.less';
-//@import '../../vendor/bootstrap/less/type.less';
-//@import '../../vendor/bootstrap/less/grid.less';
-//@import '../../vendor/bootstrap/less/layouts.less';
-//@import '../../vendor/bootstrap/less/navs.less';
-//@import '../../vendor/bootstrap/less/navbar.less';
-//@import '../../vendor/bootstrap/less/buttons.less';
-//@import '../../vendor/bootstrap/less/button-groups.less';
-//@import '../../vendor/bootstrap/less/dropdowns.less';
+@import '../../vendor/bootstrap/less/mixins.less';
+@import '../../vendor/bootstrap/less/reset.less';
+@import '../../vendor/bootstrap/less/utilities.less';
+@import '../../vendor/bootstrap/less/scaffolding.less';
+@import '../../vendor/bootstrap/less/type.less';
+@import '../../vendor/bootstrap/less/grid.less';
+@import '../../vendor/bootstrap/less/layouts.less';
+@import '../../vendor/bootstrap/less/navs.less';
+@import '../../vendor/bootstrap/less/navbar.less';
+@import '../../vendor/bootstrap/less/buttons.less';
+@import '../../vendor/bootstrap/less/button-groups.less';
+@import '../../vendor/bootstrap/less/dropdowns.less';
 
 /**
  * This is our main variables file. It in turn imports the `variables` file from
@@ -31,6 +31,13 @@
 
 @import 'variables.less';
 
+.event_list {
+  padding-bottom: 15px;
+  margin-bottom: 15px;
+  .event_attr{
+    display:block;
+  }
+}
 
 .footer {
   margin-top: 80px;
@@ -40,27 +47,6 @@
     border-top: 1px solid #DDD;
   }
 
-  .social {
-    float: right;
-    margin: 0;
-    list-style: none;
-
-    li {
-      float: left;
-      margin-left: 20px;
-
-      a, a:visited {
-        color: @grayLight;
-        text-decoration: none;
-        font-size: 40px;
-//        .transition( 250ms ease-in-out );
-
-        &:hover {
-          color: @gray;
-        }
-      }
-    }
-  }
 }
 //@import '../app/home/home.less';
 
