--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -3,7 +3,7 @@
  * overwrites that are not specific to components should be maintained.
  */
 
-@import '../../vendor/bootstrap/less/variables.less';
+//@import '../../vendor/bootstrap/less/variables.less';
 
 
 /**
@@ -11,3 +11,6 @@
  */
 
 //@sansFontFamily: 'Roboto', sans-serif;
+
+@headerHeight:  40px;
+@footerHeight:  40px;
