--- a/src/less/main.less
+++ b/src/less/main.less
@@ -1,59 +1,38 @@
-/**
- * This is the main application stylesheet. It should include or import all
- * stylesheets used throughout the application as this is the only stylesheet in
- * the Grunt configuration that is automatically processed.
- */
+
+@import 'variables';
+@import "mixinx";
 
 
-/**
- * First, we include the Twitter Bootstrap LESS files. Only the ones used in the
- * project should be imported as the rest are just wasting space.
-//*/
+body,ul,li {
+  padding:0;
+  margin:0;
+  border:0;
+}
 
-
-@import 'variables.less';
-
-@import '../../vendor/bootstrap/less/mixins.less';
-@import '../../vendor/bootstrap/less/reset.less';
-@import '../../vendor/bootstrap/less/utilities.less';
-@import '../../vendor/bootstrap/less/scaffolding.less';
-@import '../../vendor/bootstrap/less/type.less';
-@import '../../vendor/bootstrap/less/grid.less';
-@import '../../vendor/bootstrap/less/layouts.less';
-@import '../../vendor/bootstrap/less/navs.less';
-@import '../../vendor/bootstrap/less/navbar.less';
-@import '../../vendor/bootstrap/less/buttons.less';
-@import '../../vendor/bootstrap/less/button-groups.less';
-@import '../../vendor/bootstrap/less/dropdowns.less';
-@import '../../vendor/bootstrap/less/labels-badges.less';
-//@import '../../vendor/bootstrap/less/responsive.less';
-//@import "../../vendor/topcoat/topcoat-mobile-dark.min.css";
-
-/**
- * This is our main variables file. It in turn imports the `variables` file from
- * Twitter Bootstrap. We must include it last so we can overwrite any variable
- * definitions in our imported stylesheets.
- */
-
-
-//*{margin:0;padding:0;border:0;}
-//article,aside,details,figcaption,figure,footer,header,hgroup,nav,section,audio,canvas,video{display:block;}
-body{
-  background:#eee;
-  height:100%;
-  padding-top: @navbarHeight;
-  padding-bottom: @navbarHeight;
+body {
+  font-size:12px;
   -webkit-user-select:none;
   -webkit-text-size-adjust:none;
+  font-family:helvetica;
 }
 
-ul{
-  .event_list {
-    .event_attr{
-      display:block;
-    }
-  }
+#header {
+  .fixbar;
+  top: 0; left: 0;
 }
 
+#wrapper {
+  position:absolute; z-index:1;
+  top:@headerHeight; bottom:@footerHeight; left: 0px;
+  width:100%;
+  background:#aaa;
+  overflow:auto;
+}
 
+#footer {
+  .fixbar(@footerHeight);
+  bottom:0; left:0;
+}
 
+@import "../common/scroll/scroll";
+@import "../app/home/home";
