--- a/src/less/main.less
+++ b/src/less/main.less
@@ -21,11 +21,11 @@ body {
   top: 0; left: 0;
 }
 
-.card {
+#wrapper {
   position:absolute; z-index:1;
   top:@headerHeight; bottom:@footerHeight; left: 0px;
   width:100%;
-//  background:#aaa;
+  background:#aaa;
   overflow:auto;
 }
 
@@ -36,4 +36,3 @@ body {
 
 @import "../common/scroll/scroll";
 @import "../app/home/home";
-@import "transition";
