--- a/src/app/home/home.tpl.html
+++ b/src/app/home/home.tpl.html
@@ -1,53 +1,32 @@
 
-<!--class="card mb-slide" ng-class="{{{true: 'mb-in', false: 'mb-out'}[e==null]}}-->
-
-<div id="wrapper" class="card">
-    <div id="scroller" ng-hide="e">
+<div id="wrapper">
+    <div id="scroller">
         <div id="pullDown" data-flip="松开即可刷新..." data-load="加载中...">
             <span class="pullDownIcon"></span><span class="pullDownLabel">下拉可以刷新...</span>
         </div>
         <ul id="thelist" ng-init='list = [ "已取消　", "未知状态", "即将开始", "正在进行", "已经结束"]'>
-
-            <li class="clearfix" ng-repeat="e in events" ng-click="$parent.e=e">
-                <a>
+            <li class="clearfix" ng-repeat="event in events">
                 <div class="list-thumb">
-                    <img src="{{e.image.base}}{{e.image.thumbnail2}}"/>
+                    <img src="{{event.image.base}}{{event.image.thumbnail2}}"/>
                 </div>
                 <div class="list-info">
-                   <span>{{e.title}}</span>
+                   <span>{{event.title}}</span>
                     <span class="event_attr event_ca">
-                    类别：{{e.ca}}
+                    类别：{{event.ca}}
                     </span>
                     <span class="event_attr event_time">
-                    时间：{{e.start_time| date:'MM月dd日 HH:mm'}}
+                    时间：{{event.start_time| date:'MM月dd日 HH:mm'}}
                     </span>
-                    <span class="event_attr event_avenue">地点：{{e.avenue}}</span>
+                    <span class="event_attr event_avenue">地点：{{event.avenue}}</span>
                 </div>
                 <div class="list-meta">
-                   <span>{{list[e.status+1]}}</span>
+                   <span>{{list[event.status+1]}}</span>
                 </div>
-                </a>
             </li>
         </ul>
-        <div id="pullUp" class="hide" ng-click="more()">
-            <span class="pullUpIcon"></span><span class="pullUpLabel">加载更多...</span>
+        <div id="pullUp" class="hide">
+            <span class="pullUpIcon"></span><span class="pullUpLabel">上拉可以加载更多...</span>
         </div>
     </div>
-
-
-    <div ng-click="e=null" ng-show="e">
-        <h4>{{e.title}}</h4>
-        <img src="{{e.image.base}}{{e.image.thumbnail2}}"/>
-        <p>{{e.description}}</p>
-    </div>
-
-
 </div>
 
-<!--<div class="card mb-slide" ng-class="{{{true: 'mb-out', false: 'mb-in'}[e==null]}}">-->
-    <!--<div ng-click="e=null">-->
-        <!--<h4>{{e.title}}</h4>-->
-        <!--<img src="{{e.image.base}}{{e.image.thumbnail2}}"/>-->
-        <!--<p>{{e.description}}</p>-->
-    <!--</div>-->
-<!--</div>-->
