--- a/src/less/main.less
+++ b/src/less/main.less
@@ -36,4 +36,5 @@ body {
 
 @import "../common/scroll/scroll";
 @import "../app/home/home";
-@import "transition";
+@import "../../vendor/angular-mobile-nav/mobile-nav.css";
+//@import "transition";
