--- a/src/app/detail/detail.tpl.html
+++ b/src/app/detail/detail.tpl.html
@@ -1,7 +1,6 @@
 
-<div class="card">
-<div ng-click="$nav.back()">
-    <h4>{{e.title}}</h4>
+<div class="card" ng-init="">
+<div>
     <img ng-src="{{e.image.base}}{{e.image.thumbnail2}}"/>
     <p>{{e.description}}</p>
 </div>
