--- a/src/less/mixinx.less
+++ b/src/less/mixinx.less
@@ -22,7 +22,8 @@
   width:100%;
   height: @height;
   line-height: @height;
-  #gradient > .nav-bar;
+//  #gradient > .nav-bar;
+  background: url(toolbar.png) #6d84a2 repeat-x;
   padding:0;
   color:#eee;
   font-size:20px;
