--- a/src/less/main.less
+++ b/src/less/main.less
@@ -34,7 +34,43 @@ body {
   bottom:0; left:0;
 }
 
+.button {
+  position: absolute;
+  overflow: hidden;
+  left: 6px;
+  top: 8px;
+  margin: 0;
+  border-width: 0 5px;
+  padding: 0 3px;
+  height: 30px;
+  line-height: 30px;
+  font-family: inherit;
+  font-size: 12px;
+  font-weight: bold;
+  color: #FFFFFF;
+  text-shadow: rgba(0, 0, 0, 0.6) 0px -1px 0;
+  text-overflow: ellipsis;
+  text-decoration: none;
+  white-space: nowrap;
+  background: none;
+}
+
+.back-button{
+//  float: left;
+  left: 6px;
+  text-align: left;
+  padding: 0;
+//  max-width: 55px;
+  border-width: 0 8px 0 14px;
+  margin: auto;
+  -webkit-border-image: url(backButtonBrdr.png) 0 8 0 14;
+  -moz-border-image: url(backButtonBrdr.png) 0 8 0 14;
+  background: url(backButtonBack.png) repeat-x;
+
+}
+
 @import "../common/scroll/scroll";
 @import "../app/home/home";
+//@import "../../vendor/angular-jqm/components/jquery-mobile/jquery.mobile-1.3.1.min.css"
 @import "../../vendor/angular-mobile-nav/mobile-nav.css";
 //@import "transition";
