--- a/src/less/main.less
+++ b/src/less/main.less
@@ -1,11 +1,9 @@
 
 @import "../../vendor/angular-jqm/components/jquery-mobile/jquery.mobile-1.3.1.min.css";
+@import "../../vendor/font-awesome/less/font-awesome";
 @import 'variables';
 @import "mixinx";
 
-* {
-  -webkit-backface-visibility: hidden;
-}
 
 body,ul,li {
   padding:0;
@@ -20,11 +18,6 @@ body {
   font-family:helvetica;
 }
 
-#header {
-  .fixbar;
-  top: 0; left: 0;
-}
-
 .card {
   position:absolute; z-index:1;
   top:@headerHeight; bottom:@footerHeight; left: 0px;
@@ -36,6 +29,17 @@ body {
   height: 100%;
 }
 
+@import "../common/scroll/scroll";
+@import "../app/home/home";
+
+
+
+/////////////////////////
+
+#header {
+  .fixbar;
+  top: 0; left: 0;
+}
 #footer {
   .fixbar(@footerHeight);
   bottom:0; left:0;
@@ -76,8 +80,5 @@ body {
 
 }
 
-@import "../common/scroll/scroll";
-@import "../app/home/home";
 
-//@import "../../vendor/angular-mobile-nav/mobile-nav.css";
-//@import "transition";
+
