--- a/src/app/home/home.less
+++ b/src/app/home/home.less
@@ -1,40 +1,49 @@
 
+.app-info{
+  span{
+    display: block;
+    line-height: 150%;
+  }
+}
 
+#home{
+//  padding-bottom: 60px;
+  ul{
+    list-style:none;
+    padding:0;
+    margin:0;
+    width:100%;
+    text-align:left;
+    li{
+      border-bottom:1px solid #ccc;
+      border-top:1px solid #fff;
+      background-color:#fafafa;
+      font-size:14px;
 
-
-#scroller ul {
-  list-style:none;
-  padding:0;
-  margin:0;
-  width:100%;
-  text-align:left;
-  li{
-    border-bottom:1px solid #ccc;
-    border-top:1px solid #fff;
-    background-color:#fafafa;
-    font-size:14px;
-    div{
-      padding: 10px 5px;
-    }
-    .list-thumb{
-      float: left;
-      //  width: 10% !important;
-      //  width:expression(this.width > 600 ? "600px" : this.width)!important;
-      //  max-width: 100px;
-      //  overflow: hidden;
-    }
-
-    .list-info{
-      float: left;
-      span{
-        display: block;
-        line-height: 150%;
-      }
-    }
-
-    .list-meta{
-      float: right;
+//      div{
+//        padding: 10px 5px;
+//      }
+//      .list-thumb{
+//        float: left;
+//        //  width: 10% !important;
+//        //  width:expression(this.width > 600 ? "600px" : this.width)!important;
+//        //  max-width: 100px;
+//        //  overflow: hidden;
+//      }
+//
+//      .list-info{
+//        float: left;
+//        span{
+//          display: block;
+//          line-height: 150%;
+//        }
+//      }
+//
+//      .list-meta{
+//        float: right;
+//      }
     }
   }
+
 }
 
