--- a/src/less/mixinx.less
+++ b/src/less/mixinx.less
@@ -22,11 +22,11 @@
   width:100%;
   height: @height;
   line-height: @height;
-//  #gradient > .nav-bar;
-  background: url(toolbar.png) #6d84a2 repeat-x;
+  #gradient > .nav-bar;
+//  background: url(toolbar.png) #6d84a2 repeat-x;
   padding:0;
   color:#eee;
-  font-size:20px;
+//  font-size:20px;
   text-align:center;
 
   a{
@@ -54,13 +54,13 @@
   }
 }
 
-// Quick floats
-.pull-right {
-  float: right;
-}
-.pull-left {
-  float: left;
-}
+//// Quick floats
+//.pull-right {
+//  float: right;
+//}
+//.pull-left {
+//  float: left;
+//}
 
 // Toggling content
 .hide {
@@ -79,3 +79,18 @@
 .affix {
   position: fixed;
 }
+
+.text-left           { text-align: left; }
+.text-right          { text-align: right; }
+.text-center         { text-align: center; }
+.v-middle            {vertical-align: middle;}
+
+//.left-button {
+//  .pull-left;
+//  padding: 10px;
+//
+//}
+//.right-button {
+//  .pull-right;
+//  padding: 10px;
+//}
