--- a/src/app/home/home.tpl.html
+++ b/src/app/home/home.tpl.html
@@ -1,19 +1,21 @@
 
 <div jqm-page>
-    <div id="wrapper" class="card">
-        <div id="scroller">
-        <div id="pullDown" data-flip="松开即可刷新..." data-load="加载中...">
-            <span class="pullDownIcon"></span><span class="pullDownLabel">下拉可以刷新...</span>
-        </div>
-        <ul id="thelist" ng-init='list = [ "已取消　", "未知状态", "即将开始", "正在进行", "已经结束"]' scrolly-scroll>
-
-            <li class="clearfix" ng-repeat="e in objects" ng-click="onDetail(e)">
-                <a>
-                <div class="list-thumb">
+    <!--<div jqm-header jqm-theme='c' class="app-bar">-->
+        <!--<a class="option pull-left"><i class="icon-edit icon-large"></i></a>-->
+        <!--<a class="option pull-right">登陆</a>-->
+        <!--<h3>{{title}}</h3>-->
+    <!--</div>-->
+    <div id="home">
+        <!--<div id="pullDown" data-flip="松开即可刷新..." data-load="加载中...">-->
+            <!--<span class="pullDownIcon"></span><span class="pullDownLabel">下拉可以刷新...</span>-->
+        <!--</div>-->
+        <ul>
+            <li class="row" ng-repeat="e in objects" ng-click="onDetail(e)">
+                <div class="pull-left pas">
                     <img ng-src="{{e.image.base}}{{e.image.thumbnail2}}"/>
                 </div>
-                <div class="list-info">
-                   <span>{{e.title}}</span>
+                <div class="pull-left app-info">
+                   <span><strong>{{e.title}}</strong></span>
                     <span class="event_attr event_ca">
                     类别：{{e.ca}}
                     </span>
@@ -22,15 +24,13 @@
                     </span>
                     <span class="event_attr event_avenue">地点：{{e.avenue}}</span>
                 </div>
-                <div class="list-meta">
-                   <span>{{list[e.status+1]}}</span>
+                <div class="pull-right">
+                   <span>{{status[e.status+1]}}</span>
                 </div>
-                </a>
             </li>
         </ul>
         <div id="pullUp" class="idle" ng-click="more()">
             <span class="pullUpIcon"></span><span class="pullUpLabel">加载更多...</span>
-        </div>
         </div>
     </div>
 </div>
