--- a/src/less/main.less
+++ b/src/less/main.less
@@ -1,84 +1,156 @@
 
 @import "../../vendor/angular-jqm/components/jquery-mobile/jquery.mobile-1.3.1.min.css";
 @import "../../vendor/font-awesome/less/font-awesome";
+@import "../../vendor/flat-ui/less/flat-ui";
 @import 'variables';
 @import "mixinx";
 
-
-body,ul,li {
-  padding:0;
-  margin:0;
-  border:0;
+*{
+  margin: 0 0;
+  padding: 0 0;
 }
-
-body {
-  font-size:12px;
-  -webkit-user-select:none;
-  -webkit-text-size-adjust:none;
-  font-family:helvetica;
-}
-
-.card {
-  position:absolute; z-index:1;
-  top:@headerHeight; bottom:@footerHeight; left: 0px;
-  width:100%;
-//  background:#aaa;
-  overflow:auto;
-}
-.ui-content{
-  height: 100%;
-}
-
-@import "../common/scroll/scroll";
-@import "../app/home/home";
-
-
-
-/////////////////////////
-
 #header {
   .fixbar;
   top: 0; left: 0;
-}
-#footer {
-  .fixbar(@footerHeight);
-  bottom:0; left:0;
-}
-
-.button {
-  position: absolute;
-  overflow: hidden;
-  left: 6px;
-  top: 8px;
-  margin: 0;
-  border-width: 0 5px;
-  padding: 0 3px;
-  height: 30px;
-  line-height: 30px;
-  font-family: inherit;
-  font-size: 12px;
-  font-weight: bold;
-  color: #FFFFFF;
-  text-shadow: rgba(0, 0, 0, 0.6) 0px -1px 0;
-  text-overflow: ellipsis;
-  text-decoration: none;
-  white-space: nowrap;
-  background: none;
+  .option{
+    padding: 0 0.5em;
+  }
 }
 
-.back-button{
-//  float: left;
-  left: 6px;
-  text-align: left;
-  padding: 0;
-//  max-width: 55px;
-  border-width: 0 8px 0 14px;
-  margin: auto;
-  -webkit-border-image: url(backButtonBrdr.png) 0 8 0 14;
-  -moz-border-image: url(backButtonBrdr.png) 0 8 0 14;
-  background: url(backButtonBack.png) repeat-x;
-
+.popup{
+  width: 60%;
+  max-width: 400px;
+  div{
+    .pam;
+  }
+  p{
+    text-align: center;
+    .mam;
+  }
+  .popup-header{
+    border-bottom: 1px solid #eee;
+  };
+  .popup-footer{
+    text-align: right; // right align buttons
+    border-top: 1px solid #ddd;
+//    .border-radius(0 0 6px 6px);
+//    .box-shadow(inset 0 1px 0 white);
+    .clearfix(); // clear it in case folks use .pull-* classes on buttons
+  }
 }
 
+a {
+  text-decoration:none;
+  :hover {
+    color: mix(@base, darkgray, 85%);
+  }
+  :active{
+    color: mix(@base, darkgray, 60%);;
+  }
+}
+hr {
+//  margin: 5px 0;
+  border: 0;
+  border-top: 1px solid #eee;
+  border-bottom: 1px solid #fff;
+}
+
+.ui-content{
+  margin-top: @headerHeight !important;
+}
+
+.row{
+  .clearfix;
+  width: 100%;
+//  div{
+//    padding: 10px 5px;
+//  }
+}
+
+.app-tabs{
+  padding-bottom: 0 !important;
+  border-bottom: 1px solid mix(@base, darkgray, 85%);
+  span{
+    padding: 0.1em 0.5em;
+    &.active{
+      color: #0000ff;
+      border-bottom: 3px solid mix(@base, blue, 85%);
+    }
+  }
+}
+
+
+@import "../common/scroll/scroll";
+@import "../app/home/home";
+@import "../app/detail/detail";
+
+/////////////////////////
+
+//.card {
+//  position:absolute; z-index:1;
+//  top:@headerHeight; bottom:@footerHeight; left: 0px;
+//  width:100%;
+//  //  background:#aaa;
+//  overflow:auto;
+//}
+
+
+//#footer {
+//  .fixbar(@footerHeight);
+//  bottom:0; left:0;
+//}
+
+//.button {
+//  position: absolute;
+//  overflow: hidden;
+//  left: 6px;
+//  top: 8px;
+//  margin: 0;
+//  border-width: 0 5px;
+//  padding: 0 3px;
+//  height: 30px;
+//  line-height: 30px;
+//  font-family: inherit;
+//  font-size: 12px;
+//  font-weight: bold;
+//  color: #FFFFFF;
+//  text-shadow: rgba(0, 0, 0, 0.6) 0px -1px 0;
+//  text-overflow: ellipsis;
+//  text-decoration: none;
+//  white-space: nowrap;
+//  background: none;
+//}
+//
+//.back-button{
+////  float: left;
+//  left: 6px;
+//  text-align: left;
+//  padding: 0;
+////  max-width: 55px;
+//  border-width: 0 8px 0 14px;
+//  margin: auto;
+//  -webkit-border-image: url(backButtonBrdr.png) 0 8 0 14;
+//  -moz-border-image: url(backButtonBrdr.png) 0 8 0 14;
+//  background: url(backButtonBack.png) repeat-x;
+//
+//}
+
+//
+//.app-bar{
+//  a {
+//    text-decoration:none;
+//    :hover {
+//      color: white;
+//    }
+//    :active{
+//      color: white;
+//    }
+//  }
+//  .option{
+//    margin-top: 0.6em;
+//    margin-bottom: 0.8em;
+//    padding: 0 0.5em;
+//  }
+//}
 
 
