--- a/src/app/home/home.tpl.html
+++ b/src/app/home/home.tpl.html
@@ -5,6 +5,13 @@
         <!--<a class="option pull-right">登陆</a>-->
         <!--<h3>{{title}}</h3>-->
     <!--</div>-->
+
+    <!--<div id="header">-->
+        <!--<a class="option pull-left"><i class="icon-edit icon-large"></i></a>-->
+        <!--<span>{{title}}</span>-->
+        <!--<a class="option pull-right" ng-click="onRefresh()"><i class="icon-refresh icon-large"></i></a>-->
+    <!--</div>-->
+
     <div id="home">
         <!--<div id="pullDown" data-flip="松开即可刷新..." data-load="加载中...">-->
             <!--<span class="pullDownIcon"></span><span class="pullDownLabel">下拉可以刷新...</span>-->
@@ -29,7 +36,7 @@
                 </div>
             </li>
         </ul>
-        <div id="pullUp" class="idle" ng-click="more()">
+        <div id="pullUp" class="idle" ng-click="onMore()">
             <span class="pullUpIcon"></span><span class="pullUpLabel">加载更多...</span>
         </div>
     </div>
