add comment add/delete

--- a/src/app/detail/detail.less
+++ b/src/app/detail/detail.less
@@ -2,15 +2,15 @@
 
 
 
-.app-user-list{
-  img{
-    vertical-align: middle;
-  }
-}
-
-.app-desc{
-  white-space:pre-wrap;
-}
+//.app-user-list{
+//  img{
+//    vertical-align: middle;
+//  }
+//}
+//
+//.app-desc{
+//  white-space:pre-wrap;
+//}
 #detail{
 
 }
