--- a/src/app/detail/detail.tpl.html
+++ b/src/app/detail/detail.tpl.html
@@ -1,5 +1,5 @@
 
-<div jqm-page allow-same-view-animation>
+<div jqm-page>
     <!--<div jqm-header jqm-theme='c' class="app-bar">-->
         <!--<a class="option pull-left" href="#/"><i class="fui-arrow-left icon-large"></i> </a>-->
         <!--<h3>{{title}}</h3>-->
@@ -50,11 +50,11 @@
                 </a>
             </div>
 
-            <div ng-show="select==2">
+            <div ng-show="select==2" ng-controller='CommentCtrl'>
                 <div style="width: 90%" >
-                <textarea class="flat" style="width: 100%" ng-model="form.comment"></textarea>
+                <textarea class="flat" style="width: 100%" ng-model="comment"></textarea>
                 <div class="pvl" style="width: 100%">
-                    <input type="checkbox" ng-model="form.wbChecked" style="width: auto">
+                    <input type="checkbox" ng-model="wbChecked" style="width: auto">
                     <span>同时发布到新浪微博</span>
                     <a class="btn btn-primary pull-right " ng-click="onComment()">发布</a>
                 </div>
