--- a/src/less/mixinx.less
+++ b/src/less/mixinx.less
@@ -18,7 +18,7 @@
 
 
 .fixbar(@height: @headerHeight) {
-  position:absolute; z-index:2;
+  position:fixed; z-index:2;
   width:100%;
   height: @height;
   line-height: @height;
