--- a/src/less/main.less
+++ b/src/less/main.less
@@ -1,4 +1,19 @@
 
+
+@import '../../vendor/bootstrap/less/mixins.less';
+//@import '../../vendor/bootstrap/less/reset.less';
+@import '../../vendor/bootstrap/less/utilities.less';
+//@import '../../vendor/bootstrap/less/scaffolding.less';
+//@import '../../vendor/bootstrap/less/type.less';
+@import '../../vendor/bootstrap/less/grid.less';
+//@import '../../vendor/bootstrap/less/layouts.less';
+//@import '../../vendor/bootstrap/less/navs.less';
+//@import '../../vendor/bootstrap/less/navbar.less';
+//@import '../../vendor/bootstrap/less/buttons.less';
+//@import '../../vendor/bootstrap/less/button-groups.less';
+//@import '../../vendor/bootstrap/less/dropdowns.less';
+@import "../../vendor/bootstrap/less/forms";
+
 @import "../../vendor/angular-jqm/components/jquery-mobile/jquery.mobile-1.3.1.min.css";
 @import "../../vendor/font-awesome/less/font-awesome";
 @import "../../vendor/flat-ui/less/flat-ui";
@@ -9,6 +24,12 @@
   margin: 0 0;
   padding: 0 0;
 }
+
+//body{
+//  padding-top: @headerHeight;
+//  padding-bottom: @footerHeight;
+//}
+
 #header {
   .fixbar;
   top: 0; left: 0;
@@ -16,6 +37,7 @@
     padding: 0 0.5em;
   }
 }
+
 
 .popup{
   width: 60%;
@@ -78,6 +100,86 @@ hr {
     }
   }
 }
+
+
+.fade-hide, .fade-show {
+  -webkit-transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 1.5s;
+  -moz-transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 1.5s;
+  -o-transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 1.5s;
+  transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 1.5s;
+}
+
+.fade-hide {
+  opacity:1;
+}
+.fade-hide.fade-hide-active {
+  opacity:0;
+}
+
+.fade-show {
+  opacity:0;
+}
+.fade-show.fade-show-active {
+  opacity:1;
+}
+
+.wave-enter, .wave-leave {
+  -webkit-transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
+  -moz-transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
+  -o-transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
+  transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
+}
+
+.wave-enter {
+  position:absolute;
+  left:100%;
+}
+
+.wave-enter-active {
+  left:0;
+}
+
+.wave-leave {
+  position:absolute;
+  left:0;
+}
+
+.wave-leave-active {
+  left:-100%;
+}
+
+//
+//.app-tab-container{
+//  position:relative;
+//  .ng-enter, .ng-leave {
+//    -webkit-transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
+//    -moz-transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
+//    -o-transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
+//    transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
+//
+//    position:absolute;
+//    top:0;
+//    left:0;
+//    right:0;
+//    bottom:0;
+//  }
+//
+//  .ng-enter {
+//    top:-50px;
+//  }
+//  .ng-enter.ng-enter-active {
+//    top:0;
+//  }
+//
+//  .ng-leave {
+//    top:0;
+//  }
+//
+//  .ng-leave.ng-leave-active {
+//    top:50px;
+//  }
+//
+//}
 
 
 @import "../common/scroll/scroll";
