--- a/src/app/detail/detail.tpl.html
+++ b/src/app/detail/detail.tpl.html
@@ -51,12 +51,12 @@
             </div>
 
             <div ng-switch-when="2" ng-controller='CommentCtrl'>
-                <div style="width: 90%" >
-                <textarea class="flat" style="width: 100%" ng-model="comment"></textarea>
-                <div class="pvl" style="width: 100%">
+                <div>
+                <input ng-model="comment" type="text">
+                <a class="btn btn-primary pull-right " ng-click="onComment()">发布</a>
+                <div>
                     <input type="checkbox" ng-model="wbChecked" style="width: auto">
                     <span>同时发布到新浪微博</span>
-                    <a class="btn btn-primary pull-right " ng-click="onComment()">发布</a>
                 </div>
                 </div>
 
