--- a/src/less/main.less
+++ b/src/less/main.less
@@ -40,8 +40,8 @@
 
 
 .popup{
-  width: 60%;
-  max-width: 400px;
+//  width: 60%;
+//  max-width: 400px;
   div{
     .pam;
   }
@@ -75,6 +75,12 @@ hr {
   border: 0;
   border-top: 1px solid #eee;
   border-bottom: 1px solid #fff;
+}
+
+form{
+  p{
+    .mam;
+  }
 }
 
 .ui-content{
